--- a/5.ders/python_notebooks/Print_Fonksiyonu_ve_Formatlama.ipynb
+++ b/5.ders/python_notebooks/Print_Fonksiyonu_ve_Formatlama.ipynb
@@ -565,9 +565,9 @@
       "cell_type": "code",
       "execution_count": null,
       "metadata": {
-        "scrolled": true,
         "id": "NJtLtE159YZ6",
-        "outputId": "1ab548f6-f1f9-4369-963b-274cc2d6587b"
+        "outputId": "1ab548f6-f1f9-4369-963b-274cc2d6587b",
+        "scrolled": true
       },
       "outputs": [
         {
@@ -663,6 +663,9 @@
     }
   ],
   "metadata": {
+    "colab": {
+      "provenance": []
+    },
     "kernelspec": {
       "display_name": "Python 3",
       "language": "python",
@@ -679,9 +682,6 @@
       "nbconvert_exporter": "python",
       "pygments_lexer": "ipython3",
       "version": "3.6.1"
-    },
-    "colab": {
-      "provenance": []
     }
   },
   "nbformat": 4,
